<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_marginLeft="15dp"
                                                   android:layout_marginRight="15dp"
        >

    <TextView
            android:text="@string/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/h1"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="50dp"

            android:textAlignment="center"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="20sp"/>


    <TextView
            android:text="@string/hint_main"
            android:layout_width="264dp"
            android:layout_height="58dp"
            android:id="@+id/hint_main"

            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/h1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:textAlignment="center"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="24sp"
            />

    <TextView
            android:text="@string/hint_second"
            android:layout_width="244dp"
            android:layout_height="34dp"
            android:id="@+id/hint_second"

            android:layout_marginTop="15dp"


            app:layout_constraintTop_toBottomOf="@id/hint_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:textAlignment="center"
            android:textColor="#333333"
            android:textStyle="normal"
            android:textSize="14sp"
            />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:id="@id/field_number"

            android:layout_marginTop="25dp"


            app:layout_constraintTop_toBottomOf="@id/hint_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field"
                android:background="@drawable/round_corner_solid"
                android:textColor="#AAACAE"
                android:textColorHint="#AAACAE"
                />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/login"
            android:id="@+id/button_login"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_gradient"

            app:layout_constraintTop_toBottomOf="@id/field_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>




