<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_marginLeft="15dp"
                                                   android:layout_marginRight="15dp"

        >


    <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_pic"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="152dp"
            />

    <TextView
            android:text="@string/hint"
            android:id="@+id/hint"
            android:layout_width="328dp"
            android:layout_height="51dp"

            app:layout_constraintTop_toBottomOf="@id/mainLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:textAlignment="center"
            android:textColor="#333333"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/login"
            android:id="@+id/button_login"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_gradient"

            app:layout_constraintTop_toBottomOf="@id/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />



    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/registration"
            android:id="@+id/button_registration"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_gradient"

            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <androidx.appcompat.widget.AppCompatButton
            android:text="MainFragment"
            android:id="@+id/button_main"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_gradient"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>

