<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_marginLeft="15dp"
                                                   android:layout_marginRight="15dp"
                                                   android:layout_marginTop="50dp"
        >

    <TextView
            android:id="@+id/header_title"
            android:text="@string/courier_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="20sp"/>

    <ImageView
            android:id="@+id/support_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support_pic"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/header_title"
            app:layout_constraintTop_toTopOf="@id/header_title"
            />


    <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_picture"
            android:layout_width="76dp"
            android:layout_height="76dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/header_title"
            app:layout_constraintStart_toStartOf="parent"
            >

        <com.google.android.material.card.MaterialCardView
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cardCornerRadius="12dp"
                android:layout_gravity="center">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_pic"/>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <TextView
            android:id="@+id/courier_fio"
            android:text="Иванов Иван Иванович"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            app:layout_constraintTop_toTopOf="@id/profile_picture"
            app:layout_constraintStart_toEndOf="@id/profile_picture"

            android:textColor="#333333"
            android:textFontWeight="500"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/courier_number"
            android:text="+ 7(911) 111-11-11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            app:layout_constraintTop_toBottomOf="@id/courier_fio"
            app:layout_constraintStart_toStartOf="@id/courier_fio"

            android:textColor="#333333"
            android:textFontWeight="400"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/exit_account"
            android:text="Выйти"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            app:layout_constraintTop_toBottomOf="@id/courier_number"
            app:layout_constraintStart_toStartOf="@id/courier_number"

            android:textColor="#333333"
            android:textFontWeight="400"
            android:textSize="16sp"/>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_rating"
            android:layout_width="160dp"
            android:layout_height="98dp"
            android:layout_marginTop="35dp"

            app:cardCornerRadius="12dp"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp"

            android:background="@drawable/round_corner_solid"

            app:layout_constraintStart_toStartOf="@id/profile_picture"
            app:layout_constraintTop_toBottomOf="@id/profile_picture">

        <TextView
                android:id="@+id/courier_rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/courier_rating"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Ваш рейтинг"
                android:textSize="14sp"
                android:textColor="#333333"
                android:gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_counter"
            android:layout_width="160dp"
            android:layout_height="98dp"

            app:cardCornerRadius="12dp"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp"

            android:background="@drawable/round_corner_solid"

            app:layout_constraintTop_toTopOf="@id/card_rating"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/courier_counter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/courier_counter"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Выполнено заказов"
                android:textSize="14sp"
                android:textColor="#333333"
                android:gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>




